Added compact output and compressed addresses

--- a/README
+++ b/README
@@ -22,6 +22,8 @@ Features include:
   * The ability to "split" a network based on a smaller netmask, now also with
     recursive runs on the generated subnets.
   * DNS resolution.
+  * Compact output
+  * Compressed addresses
 - IPv6
   * Compressed and expanded input addresses.
   * Compressed and expanded output.
@@ -31,6 +33,8 @@ Features include:
   * The ability to "split" a network based on a smaller netmask, now also with
     recursive runs on the generated subnets.
   * DNS resolution.
+  * Compact output
+  * Compressed addresses
 
 Sipcalc has been tested on the following platforms.
   * OpenBSD 3.0 (i386)
